<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.calculadoradeformulas.Screen2Activity"
    android:background="@drawable/bgg"
    >

    <TextView
        android:id="@+id/lambda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="Comprimento de onda (m)"
        android:textColorLink="@android:color/holo_purple"
        android:textSize="18sp"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/Preto"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editLambda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lambda"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/lambda"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold"
       />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Frequêcia(Hz)"
        android:textSize="18sp"
        android:layout_below="@+id/editLambda"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp"
        android:textColor="@color/Preto"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignTop="@+id/textView"
        android:layout_alignStart="@+id/editResu"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/editResu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:visibility="invisible"
        android:layout_marginBottom="46dp"
        android:layout_marginStart="14dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView"
        android:textSize="20sp"
        android:textColor="@color/Preto"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/igual2"
        android:onClick="clique"
        android:layout_below="@+id/editF"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginTop="53dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resultado"
        android:textSize="18sp"
        android:layout_alignTop="@+id/editResu"
        android:layout_alignParentStart="true"
        android:textColor="@color/Preto"
        android:textStyle="bold"/>

</RelativeLayout>
