<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.calculadoradeformulas.MainActivity"
    android:weightSum="1"
    android:background="@drawable/bgg"
   >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Qual fórmula você deseja calcular?"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:fontFamily="casual"
        android:textColor="@color/Preto"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:layout_width="114dp"
            android:layout_height="273dp" >

            <RadioButton
                android:id="@+id/btnScreen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Velocidade"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/btnScreen3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Frequência"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/btnScreen4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="IMC"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/lambida"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                app:srcCompat="@drawable/imcformula"
                android:layout_below="@+id/imageView6"
                android:layout_alignEnd="@+id/imageView6" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                app:srcCompat="@drawable/velo2"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/imageView6" />

            <Button
                android:id="@+id/btnScreen5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="Nos avalie!"
               android:background="@color/Magenta"
                android:drawableBottom="@drawable/fb"
                android:onClick="aaa"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
