<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.calculadoradeformulas.Screen3Activity"
    android:background="@drawable/bgg">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="Velocidade(m/s)"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView5"
        android:textColor="@color/Preto"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editVelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/textView4"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="9dp"
        android:layout_marginTop="54dp"
        android:text="Comprimento de onda (m)"
        android:textSize="20sp"
        android:textColor="@color/Preto"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editVelo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="41dp"
        android:layout_toEndOf="@+id/textView5"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editC"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Calcular"
        android:onClick="clique2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:text="Resultado"
        android:textSize="20sp"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/textView5"
        android:textColor="@color/Preto"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/editR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignStart="@+id/button"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>
